--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ nav {
 .kategori .container .card .card-img-overlay p {
     font-size: 20px;
     font-weight: 500;
-    color: #303030;
+    color: #f2f2f2;
     font-style: italic;
 }
 
