--- a/style.css
+++ b/style.css
@@ -58,15 +58,24 @@ nav {
 }
 
 .kategori .container .card .card-img-overlay p {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
-    color: #f2f2f2;
+    color: #303030;
     font-style: italic;
 }
 
 .kategori .container .card:hover {
     transform: translateY(5px);
     transition: .2s;
+}
+
+.kategori .col {
+    opacity: 0;
+    transition: 1s ease-out;
+}
+
+.kategori .col.show-kategori {
+    opacity: 1;
 }
 
 .flash-sale {
@@ -95,4 +104,13 @@ nav {
 
 .produk .container a .card-title {
     font-weight: 500;
+}
+
+.produk .col {
+    opacity: 0;
+    transition: 1s ease-out;
+}
+
+.produk .col.show-produk {
+    opacity: 1;
 }
