Finish landing page

--- a/style.css
+++ b/style.css
@@ -34,11 +34,17 @@ nav {
     color: #303030;
 }
 
-.kategori .container .kategori-produk {
+.kategori .container .card-kategori {
  background-color: white;   
  border: 1px solid #eaeaea;
  text-align: center;
  margin-bottom: 20px;
+ opacity: 0;
+ transition: 2s ease-out;
+}
+
+.kategori .container .card-kategori.show-kategori {
+    opacity: 1;
 }
 
 .kategori .container a {
@@ -90,6 +96,12 @@ nav {
     background-color: white;
     border: 1px solid #eaeaea;
     margin: 0;
+    opacity: 0;
+    transition: 1s ease-out;
+}
+
+.produk .card-produk.show-produk {
+    opacity: 1;
 }
 
 footer {
