--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ footer .follow a:hover {
     padding: 20px;
 }
 
-.single-produk .container .left-side {
+.single-produk .container .right-side {
     margin-bottom: 20px;
 }
 
