--- a/style.css
+++ b/style.css
@@ -120,13 +120,14 @@ footer .follow a:hover {
     padding: 20px;
 }
 
-.single-produk .container .right-side {
+.single-produk .container .right-side .whatsapp {
     margin-bottom: 20px;
 }
 
 .single-produk .container .right-side .shopee {
     color: #EA501F;
     border: 1px solid #EA501F;
+    margin-bottom: 20px;
 }
 
 .single-produk .container .right-side .shopee:hover {
